modify - add z-index of fixed button

--- a/assets/css/header/header.css
+++ b/assets/css/header/header.css
@@ -301,6 +301,8 @@ header {
     border-radius: 50%;
     border: 2px solid #000;
     background: #fff;
+
+    z-index: 2;
 }
 
 .fixed-btn:active {
